# Archaic-DNA-processing-pipeline

./: .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  DIVERSITY_REPORT.md  ETRUSCAN_FINDINGS.md  FADS_REPORT.md  FINDINGS.md  LICENSE  PAPER.md  README.md  RELEASING.md  SIMULATION_VALIDATION.md  VALIDATION.md  admixture_lea.py  config.yaml  etruscan_paper.py  etruscan_qpadm.py  etruscan_robustness.py  etruscan_study.py  export_plink.py  fads_report.py  generate_report.py  global_archaic_survey.py  high_archaic_survey.py  make_pdf.py  mutation_diversity.py  oase1_haplotype.py  personal_genome_study.py  phase1_validate.py  phase2_prepare.py  phase3_estimate.py  phase4_normalize.py  phase5_pca.py  phase6_outliers.py  phase7_reports.py  phase8_figures.py  phase9_robustness.py  probe_eastasian.py  pyproject.toml  (+5 more)
archaic/: __init__.py  anno.py  cli.py  config.py  consumer_dna.py  kinship.py  lib_eigenstrat.py  loci.py  log_utils.py  panel.py  profiles.py  qpadm.py  refs.py  simulate.py  smoke.py  stats.py  synthetic.py
oase1_bam_pipeline/: README.md  environment.yml  individuals.json  run_oase1_hmmix.sh  summarize_segments.py
reports/: archaic_report_1240k.html  diversity_report.html  etruscan_paper.html  etruscan_report.html  fads_report.html  simulation_report.html
results/: admixtools_fstats.csv  admixtools_qpadm.csv  admixtools_qpadm4.csv  concordance_summary.csv  diversity_ascertainment_compare.csv  diversity_by_population.csv  phase1_validation.csv  phase2_1240k_excluded.csv  phase2_1240k_global_excluded.csv  phase2_1240k_global_summary.txt  (+11 more)
tools/: qpadm4.R  (+3 more)
(+60 files in other folders)
