[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "archaic-introgression"
version = "0.2.0"
description = "Modular archaeogenetics pipeline for detecting unexpected archaic (Neanderthal/Denisovan) introgression in ancient Eurasian genomes"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Bennett Kuhn" }]
keywords = ["archaeogenetics", "ancient-DNA", "Neanderthal", "introgression", "f-statistics", "AADR"]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
sim = ["msprime>=1.3"]
pdf = ["reportlab>=4.0", "pypdf>=4.0"]
test = ["pytest>=7.0"]

[project.urls]
Repository = "https://github.com/bennettek99-spec/Archaic-DNA-processing-pipeline"

[tool.setuptools]
packages = ["archaic"]

[tool.pytest.ini_options]
testpaths = ["tests"]
